# qudit_simulations

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  test.py  test.txt
jannes_netket/: dynamics_out.mpack  tevo.py  tevo2.py
jannes_netket/src/exact/: expect.py  state.py
netket/: spinful.py  spinful_data.json  tv_model.py  tv_model_data.json
netket/src/exact/: __init__.py  dynamics.py  expect.py  state.py  utils.py
notebooks/: Commutations.ipynb  Gate_decomposition.ipynb  Plots.ipynb  Test_to_remove.ipynb  check_unitary_conj.ipynb  netket_test.ipynb  spin2_commutations.ipynb  spinful2_data_sim.json  spinful_data_sim.json  spinful_fh_map1.ipynb  spinful_fh_map2.ipynb  tv_model.ipynb  tv_model_data_sim.json
notebooks/primitives/: primitives.py  spinful.py  tv_model.py
real_scripts/: ibm_like_simulations.py
scripts/: Untitled.ipynb  comparison_OSD.py  primitives.py  qiskit_evol.py  ququart.py  ququart_2D.py  readme.md  verstraete_cirac.py
