[tool.poetry]
name = "qudit_simulation"
version = "0.1.0"
description = "Qudit simulations"
authors = ["Rodolfo Carobene <rodolfo.carobene@gmail.com>"]
license = "Apache 2.0"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
cirq = "^1.3.0"
qiskit = "^1.0.2"
qiskit-aer = "^0.13.3"
qiskit-algorithms = "^0.3.0"
qiskit-nature = "^0.7.2"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip="poetry.lock,pyproject.toml"
